remap prefix key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 
 # C-a as a prefix; similar to GNU screen
-set -g prefix C-a
+set -g prefix C-z
 unbind C-b
 
 # 1-based window indexes
@@ -45,7 +45,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Restore sendign C-l
-bind C-l send-keys 'C-l'
+# bind C-l send-keys 'C-l'
 
 # Resizing panes
 bind -r H resize-pane -L 5
