--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Restore sendign C-l
-# bind C-l send-keys 'C-l'
+bind C-l send-keys 'C-l'
 
 # Resizing panes
 bind -r H resize-pane -L 5
