tmux copycat and tmux yank plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,4 +120,12 @@ bind M \
 	set -g mouse-select-window off \;\
 	display 'Mouse: OFF'
 
+# Tmux plugins
+#
 
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-copycat    \
+  tmux-plugins/tmux-yank       \
+'
+run-shell '~/.tmux/plugins/tpm/tpm'
