Rebind previous windows tmux shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,8 +93,8 @@ bind -t vi-copy 'V' begin-selection
 bind -t vi-copy 'y' copy-selection
 
 # Previous window under prefix b
-unbind b
-bind b previous-window
+# unbind b
+bind p previous-window
 
 # Set terminal tile
 set-option -g set-titles on
