--- a/.tmux.conf
+++ b/.tmux.conf
@@ -127,5 +127,6 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-copycat    \
   tmux-plugins/tmux-yank       \
+  tmux-plugins/tmux-resurrect   \
 '
 run-shell '~/.tmux/plugins/tpm/tpm'
