Tuning vim and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,7 +101,7 @@ set-option -g set-titles on
 set-option -g set-titles-string '[#S:#I #H] #W'
 
 # Toggle automatic window renaming off
-bind C-f \
+bind R \
 	     set allow-rename off;
 
 # Toggle mouse on with prefix m
